--- a/public/screen.css
+++ b/public/screen.css
@@ -1,9 +1,70 @@
 html {
   height: 100%;
+  font: 16px / 1 sans-serif;
 }
 
 body {
   margin: 0;
   min-height: 100%;
-  font: 16px / 1 sans-serif;
+  background-color: rgb(11, 124, 145);
+}
+h1 {
+  font-family: 'noto serif', serif;
+  text-align: center;
+}
+.navigation1 {
+  display: flex;
+  border: 9;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  height: 18px;
+  background-color: skyblue;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  color: white;
+  justify-content: space-around;
+  height: 18px;
+  padding: 9px;
+}
+.navigation1 a {
+  color: white;
+  display: flex;
+}
+.navigation2 {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  background-color: grey;
+  text-align: center;
+  justify-content: center;
+  border: 7;
+  list-style: none;
+  justify-content: space-around;
+  height: 18px;
+  padding: 18px;
+}
+.navigation2 a {
+  color: black;
+  display: flex;
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+  border: 1px solid black;
+  margin: 50px;
+  margin-bottom: 155px;
+}
+.passage {
+  display: flex;
+}
+.kitty-stuff {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  height: 100%;
+  width: 100%;
 }
