--- a/public/screen.css
+++ b/public/screen.css
@@ -8,6 +8,12 @@ body {
   min-height: 100%;
   background-color: rgb(11, 124, 145);
 }
+.page1 {
+  display: flex;
+  border: 900px;
+  padding: 60px;
+  color: skyblue;
+}
 h1 {
   font-family: 'noto serif', serif;
   text-align: center;
