--- a/public/screen.css
+++ b/public/screen.css
@@ -4,14 +4,20 @@ html {
 }
 
 body {
-  margin: 60px;
-  min-height: 100%;
+  /*margin: 60px;*/
+  padding-top: none;
+  padding-left: 140px;
+  padding-right: 140px;
+  padding-bottom: 70px;
+  /*min-height: 100%;*/
+  height: 50%;
+  width: 100%;
   background-color: rgb(7, 118, 138);
 }
 .page1 {
   display: flex;
   justify-content: flex-start;
-  border: 1000px;
+  /*border: 900px;*/
   background-color: rgb(190, 234, 245);
 }
 h1 {
